# SIMPSON

./: CMakeLists.txt  OCroutines.c  OCroutines.h  averaging.c  blockdiag.c  complx.h  cryst.c  ftools.c  main.c  pulse.c  readsys.c  sim.c  simpson.c
examples/: 1_Static.in  2_MAS.in  3_CP.in  5_REDOR.in  5_REDORp.in  6_RR.in  7_Exp.in  7_Fit.in  CMakeLists.txt  README.md  testall.sh
examples/gold/: 1_Static,1.fid  1_Static,1.spe  1_Static,2.spe  1_Static,3.spe  1_Static,4.spe  2_MAS,1.fid  2_MAS,1.spe  2_MAS,2.spe  2_MAS,3.spe  3_CP,1.fid  3_CP,2.fid  5_REDOR,1.fid  5_REDORp,1.fid  6_RR_off.spe  6_RR_on.spe  7_Exp,1.fid  7_Exp,1.spe  7_Fit,1.spe
